# ASE

./: .gitignore  CLAUDE.md  NEEDTEST.md  README.md  TODO.md  config.py  docker-compose.yml  pyproject.toml  tra2html.py
agent/: Dockerfile  __init__.py  llm_agent.py  llm_client.py  main.py  replay_agent.py  simple_agent.py  tracked_agent.py
agent/bus/: __init__.py
agent/channels/: base.py  email.py  rocketchat.py  rocketchat_simple.py  rocketchat_ws.py
agent/command/: __init__.py  builtin.py  router.py
agent/config/: __init__.py  loader.py  paths.py  schema.py
agent/core/: __init__.py  context.py  hook.py  loop.py  memory.py  replay_hook.py  runner.py  subagent.py  trajectory_hook.py
agent/cron/: service.py
agent/providers/: __init__.py  openai_compat_provider.py
agent/security/: network.py
docs/: architecture.md  recovery.md  test-report.md  test_execution_report.md  testing.md  trajectory-format.md
orchestrator/: compose_gen.py  manager.py  orchestrate.py  port_allocator.py  recovery.py  task.py  task_manager.py  task_monitor.py  trajectory.py
scripts/: ase_task.py  chat_simple.py  chat_with_agent.py  create_rc_user.py  recovery_example.py  run_llm_agent.py  run_nanobot_agent.py  send_from_testuser.py  send_test_message.py  setup_rocketchat.py  start_ase.py  stop_ase.py  test_agent.py
tasks/: .port_state.json
tests/: test_channels.py  test_e2e.py  test_llm_agent.py  test_message_bus.py  test_recovery.py  test_rocketchat_channel.py  test_simple_agent.py  test_trajectory.py  test_user_sandbox.py
user/: interactive.py  main.py  sandbox.py
(+67 files in other folders)
