[project]
name = "ase"
version = "0.1.0"
description = "Agent Safety Environment - A research framework for studying agent behavior in controlled environments"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.45.0",
    "pydantic==2.12.0",
    "pydantic-settings>=2.0.0",
    "httpx==0.28.0",
    "websockets==16.0",
    "fastapi==0.115.0",
    "uvicorn==0.32.0",
    "docker==7.1.0",
    "aiofiles==24.1.0",
    "python-multipart==0.0.18",
    "aioimaplib==1.0.1",
    "aiosmtplib==3.0.2",
    "openai>=1.0.0",
    "json-repair>=0.30.0",
    "tiktoken>=0.7.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "black==24.10.0",
    "ruff==0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "orchestrator", "user"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
